--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap');
+
 *{
-    background-color: rgb(18, 18, 18);
-    margin-top: 0;
-    margin-left: 0;
+    background-color: rgb(17, 17, 17);
+    margin: 0;
+    font-family: 'Raleway', sans-serif;
 }
 
 .top-bar{
@@ -11,6 +13,23 @@
     background-color: #2a2a2a;
 
 }
+
+.logo , .profile{
+    position: absolute;
+    display: inline-block;
+    height: 40px;
+    margin-top: 10px;
+    margin-left: 10px;
+    background-color: #2a2a2a;
+}
+
+.profile{
+    height: 40px;
+    margin-top: 15px;
+    margin-right: 10px;
+    margin-left: 1400px;
+}
+
 .slide-container{
     position: absolute;
     height: 513px;
@@ -32,7 +51,16 @@
 .card-container{
     position: absolute;
     top: 760px;
-    height: 380px;
+    height: 213px;
     width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: normal;
+}
+
+.card{
+    height: 213px;
+    width: 378px;
     background-color: black;
+    border-radius: 15px;
 }
