--- a/style.css
+++ b/style.css
@@ -11,7 +11,6 @@
     height: 60px;
     width: 100%;
     background-color: #2a2a2a;
-
 }
 
 .logo , .profile{
@@ -46,6 +45,8 @@
     width: 912px;
     border-radius: 15px;
     background-color: black;
+    box-shadow: 0 0 25px 10px rgba(33, 150, 243, 0.5);
+
 }
 
 .card-container{
@@ -67,7 +68,7 @@
 }
 
 .image-zoom:hover  {
-    transform: scale(1.05);
+    transform: scale(1.1);
     transition: transform 0.3s ease;
 }
 .image-zoom  {
